docs: record modernization outcome (done vs deferred)
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01ReBijub1wXn2ys7tpPEptx